[package]
name = "bang_web"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.2"
serde = {version = "1.0.210", features = ["derive"]}
tiny_http = {version = "0.12.0", features = ["ssl-openssl"]}
toml = "0.8.19"
rust-crypto = "0.2.36"
base64 = "0.22.1"
getch-rs = "0.2.0"
base16 = "0.2.1"
rand = "0.8.5"
